# detect-dotenv-keys

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
src/dotenv_hook/: __main__.py
